--- a/packages/marquee-text/package.json
+++ b/packages/marquee-text/package.json
@@ -35,5 +35,8 @@
   ],
   "author": "zhou",
   "license": "MIT",
-  "email": "zhouzhu96@gmail.com"
+  "email": "zhouzhu96@gmail.com",
+  "git": {
+    "url": "https://github.com/letconstvar/react-libs/tree/main/packages/marquee-text"
+  }
 }
