--- a/packages/marquee-text/package.json
+++ b/packages/marquee-text/package.json
@@ -1,8 +1,13 @@
 {
-  "name": "react-marquee-text",
-  "version": "0.0.1",
+  "name": "@zhou96/marquee-text",
+  "private": false,
+  "version": "0.0.3",
   "description": "A React marquee text component",
   "type": "module",
+  "repository": {
+    "type": "github",
+    "url": "https://github.com/letconstvar/react-libs.git"
+  },
   "main": "dist/index.umd.js",
   "module": "dist/index.es.js",
   "types": "dist/types/index.d.ts",
@@ -35,8 +40,5 @@
   ],
   "author": "zhou",
   "license": "MIT",
-  "email": "zhouzhu96@gmail.com",
-  "git": {
-    "url": "https://github.com/letconstvar/react-libs/tree/main/packages/marquee-text"
-  }
+  "email": "zhouzhu96@gmail.com"
 }
