--- a/packages/marquee-text/package.json
+++ b/packages/marquee-text/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@zhou96/marquee-text",
   "private": false,
-  "version": "0.0.3",
+  "version": "0.0.5",
   "description": "A React marquee text component",
   "type": "module",
   "repository": {
@@ -10,7 +10,7 @@
   },
   "main": "dist/index.umd.js",
   "module": "dist/index.es.js",
-  "types": "dist/types/index.d.ts",
+  "types": "dist/src/index.d.ts",
   "files": [
     "dist"
   ],
