refactor(App): 替换跑马灯组件并优化展示效果
- 将 react-marquee-text 替换为 @zhou96/marquee-text
- 在 App 组件中添加新的跑马灯示例，方向为从左到右

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "react-marquee-text": "workspace:*",
+    "@zhou96/marquee-text": "workspace:*",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
