--- a/packages/marquee-text/package.json
+++ b/packages/marquee-text/package.json
@@ -1,12 +1,12 @@
 {
   "name": "@zhou96/marquee-text",
   "private": false,
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "A React marquee text component",
   "type": "module",
   "repository": {
     "type": "github",
-    "url": "https://github.com/letconstvar/react-libs.git"
+    "url": "https://github.com/letconstvar/react-libs/tree/main/packages/marquee-text"
   },
   "main": "dist/index.umd.js",
   "module": "dist/index.es.js",
@@ -40,5 +40,6 @@
   ],
   "author": "zhou",
   "license": "MIT",
-  "email": "zhouzhu96@gmail.com"
+  "email": "zhouzhu96@gmail.com",
+  "homepage": "https://github.com/letconstvar/react-libs/blob/main/packages/marquee-text/README.md"
 }
