refactor(App): 更新 App 组件以使用新的 Marquee 组件
- 替换 MarqueeText 组件为 Marquee 组件
- 更新导入语句和组件使用方式
- 添加新的 Marquee 组件示例，展示不同配置下的效果

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "@zhou96/marquee-text": "workspace:*",
+    "@zhou96/marquee": "workspace:*",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
