--- a/packages/countdown-worker/package.json
+++ b/packages/countdown-worker/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "@zhou96/marquee",
+  "name": "@zhou96/countdown-worker",
   "private": false,
-  "version": "0.0.3",
-  "description": "A React marquee component",
+  "version": "0.0.2",
+  "description": "A countdown worker class",
   "type": "module",
   "repository": {
     "type": "github",
-    "url": "https://github.com/letconstvar/react-libs/tree/main/packages/marquee"
+    "url": "https://github.com/letconstvar/react-libs/tree/main/packages/countdown-worker"
   },
   "main": "dist/index.umd.js",
   "module": "dist/index.es.js",
@@ -20,29 +20,21 @@
     "preview": "vite preview",
     "prepublishOnly": "pnpm build"
   },
-  "peerDependencies": {
-    "react": ">=16.8.0",
-    "react-dom": ">=16.8.0"
-  },
-  "devDependencies": {
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
-    "@vitejs/plugin-react": "^4.2.0",
-    "typescript": "^5.0.0",
-    "vite": "^5.0.0",
-    "vite-plugin-dts": "^4.5.4"
-  },
+  "peerDependencies": {},
+  "devDependencies": {},
   "keywords": [
-    "react",
-    "marquee",
-    "marquee-text",
-    "text",
-    "react-marquee-text",
-    "marquee-text-component",
-    "component"
+    "worker",
+    "countdown",
+    "timer",
+    "countdown-worker",
+    "timer-worker",
+    "countdown-timer",
+    "timer-countdown",
+    "countdown-timer-worker",
+    "timer-countdown-worker"
   ],
   "author": "zhou",
   "license": "MIT",
   "email": "zhouzhu96@gmail.com",
-  "homepage": "https://github.com/letconstvar/react-libs/blob/main/packages/marquee/README.md"
+  "homepage": "https://github.com/letconstvar/react-libs/blob/main/packages/countdown-worker/README.md"
 }
